src/features/form/components/FormsListPage.module.css
.container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	align-items: center;
	justify-content: center;
	max-width: 40rem;
	width: 100%;
	margin: auto;
	padding-top: 2rem;
	flex-grow: 1;
}

.list {
	max-height: 40rem;
	flex: 1;
	display: flex;
	flex-direction: column;
	width: 100%;
	gap: 2rem;
	background: var(--background-color-secondary);
	padding: 2rem;
	border-radius: 1rem;
	scrollbar-width: none;
	-ms-overflow-style: none;
}

.list::-webkit-scrollbar {
	display: none;
}

.card {
	display: flex;
	align-items: center;
	width: 100%;
	background: var(--selection);
	border: 0.0625rem solid var(--background-color-tertiary);
	border-radius: 0.5rem;
	padding: 1.5rem;
	gap: 2rem;
	justify-content: space-between;
	transition: all 0.2s ease;
	cursor: pointer;
	clip-path: polygon(1.25rem 0, 100% 0, 100% calc(100% - 1.25rem), calc(100% - 1.25rem) 100%, 0 100%, 0 1.25rem);
}

.card:hover {
	border-color: var(--orange);
	transform: translateY(-0.125rem);
}

.cardTitle {
	margin-bottom: 0.5rem;
}

.cardDescription {
	color: var(--color-caption);
	font-size: 0.875rem;
}

.empty {
	text-align: center;
	padding: 3rem;
	color: var(--comment);
	align-self: center;
	flex: 1;
	display: flex;
	align-items: center;
	justify-content: center;
}

